--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@cosmicjs/sdk": "^1.0.11",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "^2.3.6",
+    "@remix-run/react": "^2.9.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
@@ -17,8 +19,10 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.1.7",
     "isomorphic-dompurify": "^2.7.0",
     "next": "^14.0.2",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
